<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:text="@string/main_activity_label" />
    
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content" >
		    
        <TableRow>
            
            <TextView
			    android:padding="3dip"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/honey_label" />
			    
		    <EditText
			    android:id="@+id/honey"
			    android:padding="3dip"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:inputType="numberDecimal"
			    android:layout_weight="1" />
            
        </TableRow>
        
        <TableRow>
            
            <TextView
               	android:padding="3dip"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/water_label" />
			    
		    <EditText
			    android:id="@+id/water"
			    android:padding="3dip"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:inputType="numberDecimal"
			    android:layout_weight="1" />
            
        </TableRow>
        
        <TableRow>
            
            <TextView
			    android:padding="3dip"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:text="@string/target_sg_label" />
			    
		    <EditText
			    android:id="@+id/target_sg"
			    android:padding="3dip"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:inputType="numberDecimal"
			    android:layout_weight="1" />
            
        </TableRow>
        
        <TableRow>
            
            <TextView/>
            
			<Button 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:id="@+id/calc_button"
		        android:text="@string/calc_button_label"
		        android:onClick="onCalc"/>
			    
		    <Button 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center_horizontal"
		        android:id="@+id/clear_button"
		        android:text="@string/clear_button_label"
		        android:onClick="onClear"/>
            
        </TableRow>
        
    </TableLayout>
    
</LinearLayout>
